syntax="proto3";

package kry127.yandexcloud.datatransfer.v1;

import "common.proto";
import "table_guarantees.proto";
import "tasks.proto";

service SourceInterface {
    // accepts endpoint configuration and giveout plan of tasks
    rpc ConfigureEndpoint(ConfigureEndpointRequest) returns (ConfigureEndpointResponse);
    // configures endpoint on failover with persisted tasks (e.g. used for deactivation)
    rpc RestoreEndpoint(RestoreEndpointRequest) returns (ConfigureEndpointResponse);

    rpc Activate(ActivateRequest) returns (ErrorResponse);
    rpc Dectivate(DeactivateRequest) returns (ErrorResponse);

    rpc Healthcheck(HealthcheckRequest) returns (HealthcheckResponse);
}

message ConfigureEndpointRequest {
    string transfer_id = 1;
    string endpoint_config = 2;
    repeated TableGuarantee table_guarantees = 3;
}

message RestoreEndpointRequest {
    ConfigureEndpointRequest config = 1;
    repeated PersistedTask persisted_tasks = 2;
}

message ActivateRequest {
    string transfer_id = 1;
}

message DeactivateRequest {
    string transfer_id = 1;
}

message HealthcheckRequest {
    string transfer_id = 1;
}

message HealthcheckResponse {
    string transfer_id = 1;
    Status status = 2;

    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_IDLE = 1;
        STATUS_RUNNING = 2;
        STATUS_STOPPED = 3;
    }
}

message ConfigureEndpointResponse {
    oneof response {
        ConfigureEndpointOkResponse ok = 1;
        ErrorResponse error = 2;
    }
}

message ConfigureEndpointOkResponse {
    repeated Task tasks = 1;
    repeated PersistedTask persisted_tasks = 2;
}
